--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/circleimage.png" alt="Albert Fernando profile picture"></td>
+                <td><img src="circleimage.png" alt="Albert Fernando profile picture"></td>
                 <td><h1>ALBERT FERNANDO</h1>
                     <p><em><strong>College Student</strong><a href="https://www.stikom-bali.ac.id/id/"> @ITB STIKOM Bali Kampus Jimbaran</a></em></p>
                 </td>
